<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="25dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_large"
            android:text="@string/login_form"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_heading_1x" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            app:counterEnabled="true"
            app:counterMaxLength="20">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_first_name"
                android:inputType="textFilter"
                android:maxLength="20"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            app:counterEnabled="true"
            app:counterMaxLength="20">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_last_name"
                android:inputType="textFilter"
                android:maxLength="20"
                android:textColor="@color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            app:counterEnabled="true"
            app:counterMaxLength="20">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_fav_food"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_favourite_food"
                android:inputType="textFilter"
                android:maxLength="20"
                android:textColor="@color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            app:counterEnabled="true"
            app:counterMaxLength="20">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_fav_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_favourite_number"
                android:inputType="number"
                android:maxLength="20"
                android:textColor="@color/white" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rounded"
            android:text="@string/lbl_submit"
            android:textAppearance="@android:style/TextAppearance.Medium" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>